# scaffoldmaker-tools

./: README.rst  pyproject.toml
src/scaffoldmaker-tools/: decimation.py
