[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
# version = "0.0.1"  # Remove any existing version parameter.
name = "scaffoldmaker-tools"
dynamic = ["version", "readme"]
authors = [
  {name = "Auckland Bioengineering Institute", email = "abi-developers@auckland.ac.nz"}
]
description = "A collection of scripts for manipulating scaffolds."
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "scaffoldmaker-tools.__version__"}
readme = {file = ["README.rst"]}

[project.urls]
Repository = "https://github.com/ABI-Software/scaffoldmaker-tools.git"
"Bug Tracker" = "https://github.com/ABI-Software/scaffoldmaker-tools/issues"

